# gimp-mcp

./: .gitattributes  CHANGELOG.md  README.md  deploy.ps1  gimp-mcp-plugin.py  gimp_mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_call_api.py  test_dispatch_contract.py  test_exec_gate.py  test_get_thumbnail.py  test_handshake.py  test_image_metadata.py  test_layer_masks.py  test_logging.py  test_merge_down.py  test_ndjson_framing.py  test_new_tools_batch.py  test_parse_color.py  test_paste_as_layer.py  test_preview_format.py  test_restart_race.py  test_server_tools.py  test_transform_layer.py  test_undo_redo.py
