[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gimp-mcp"
version = "0.1.0"
description = "GIMP MCP integration for external control of GIMP 3.2"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    # Pinned <2: mcp v2 renames FastMCP -> MCPServer and moves the module, which would
    # break `from mcp.server.fastmcp import FastMCP` in gimp_mcp_server.py with no code
    # change. The standalone `fastmcp` package was listed but never imported — dropped.
    "mcp>=1.12,<2",
]

[project.scripts]
gimp-mcp-server = "gimp_mcp_server:main"

[tool.setuptools]
py-modules = ["gimp_mcp_server"]

[tool.ruff.lint.per-file-ignores]
"gimp-mcp-plugin.py" = ["E402"]

[tool.pytest.ini_options]
# Repo root holds gimp_mcp_server.py as a top-level module; put it on sys.path
# so unit tests under tests/ can `import gimp_mcp_server`.
pythonpath = ["."]
testpaths = ["tests"]
# Only collect test_*.py. The default also matches *_test.py, which would pull in
# tests/continuous_edit_test/continuous_edit_test.py — a standalone argparse script
# that calls sys.exit() at import and crashes collection.
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8",
    "ruff>=0.6",
]
